--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,13 @@
 site_name: Poetry and Docker workshop
+site_description: |
+  Workshop to learn how to use Poetry and Docker to develop Python applications.
+site_author: Som Energia
+docs_dir: docs
 repo_url: https://github.com/Som-Energia/somenergia-poetry-docker-workshop
 edit_uri: edit/main/docs/
+nav:
+  - Home: index.md
+
 theme:
   name: material
   features:
@@ -39,7 +46,7 @@ markdown_extensions:
   - pymdownx.magiclink
   - pymdownx.snippets:
       # check_paths: true
-      base_path: ['.']
+      base_path: ["."]
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
