--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ repo_url: https://github.com/Som-Energia/somenergia-poetry-docker-workshop
 edit_uri: edit/main/docs/
 
 theme:
+  logo: assets/images/logo.png
+  favicon: assets/images/favicon.svg
   name: material
   features:
     - content.action.edit
